--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]==0.115.13",
     "pydantic-settings==2.9.1",
+    "stomp-py>=8.2.0",
     "structlog==25.4.0",
+    "tenacity>=8.2.0",
 ]
 
 [dependency-groups]
